static/styles.css
*{
    font-family: "Fira Sans", sans-serif;
}
    
body{
    padding-top: 220px;
}

.nav-div{
    display:flex;
    justify-content: space-between;
    
    width:100%;
    height: 220px;
    background-color: #F1F1F1;

    border-radius: 0 0 30px 30px;

    top:0;
    position: fixed;
    
    transition: height 0.5s ease-in-out;
    
    box-shadow: 0px 11px 13px -3px rgba(0,0,0,0.1);

}

.nav-div .acmlogo-div{
    width: 220px;
    padding-left: 55px;
}

.acmlogo-div .acm-img-class {
    transition: all 0.4s;
    width: 90%;
    height: auto;
}


.nav-div .mid-div{
    flex : 1;
    height: inherit;
    width: auto;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.heading-div{
    transition: all 0.4s;
    margin-top: -10px;
    margin-bottom: -50px;
    margin-left: 60px;

}
.heading-div p{

    
    font-size: 4rem;
    font-weight: 600;
    line-height: 1px;
    
}


ul {
    list-style: none;

}



.navvi-link-holder a {
    float: left;
    display: block;
    text-decoration: none;
    color: inherit;
    padding: 20px 20px;
    font-size: 24px;
    font-weight: 450;

}
.navvi-link-holder a:hover {
    color: blue;

}

.nav-div .rset-div{
    width: 390px;

}


.nav-div .rset-div img {
    transition: all 0.4s;
    padding-top: 24px;
    padding-right: 5px;
    width: 95%;
    height: auto;
}




/* Animation Stuff */
.small{
    height: 100px;
}

.shrink-acm{

    transform: translateY(-50px) scale(0.48) rotate(0.01deg);
  
    
}

.hide-heading{
    opacity: 0;
    transform: translateY(-100px) scaleY(0) rotate(0.01deg);
    
    overflow: hidden;

    margin-top: 0px;
    margin-bottom: 0px;
    

}

.d-none {
    
    visibility: hidden;
    transform: translateX(400px) rotate(0.01deg);
}

/* restt */

